# rosbuild-stub

./: .gitignore  CMakeLists.txt  Makefile  README.md  add-to-rospath.sh  manifest.xml
src/: helloworld.cc
